--- a/COMP 1004.csproj
+++ b/COMP 1004.csproj
@@ -1,9 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>COMP_1004</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="wwwroot\Controllers - Copy\**" />
+    <Compile Remove="wwwroot\Controllers\**" />
+    <Content Remove="wwwroot\Controllers - Copy\**" />
+    <Content Remove="wwwroot\Controllers\**" />
+    <EmbeddedResource Remove="wwwroot\Controllers - Copy\**" />
+    <EmbeddedResource Remove="wwwroot\Controllers\**" />
+    <None Remove="wwwroot\Controllers - Copy\**" />
+    <None Remove="wwwroot\Controllers\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <Content Remove="C:\Users\Shona\.nuget\packages\bootstrap\4.5.3\contentFiles\any\any\wwwroot\css\bootstrap-grid.css" />
@@ -26,11 +37,16 @@
     <Content Remove="C:\Users\Shona\.nuget\packages\bootstrap\4.5.3\contentFiles\any\any\wwwroot\js\bootstrap.js.map" />
     <Content Remove="C:\Users\Shona\.nuget\packages\bootstrap\4.5.3\contentFiles\any\any\wwwroot\js\bootstrap.min.js" />
     <Content Remove="C:\Users\Shona\.nuget\packages\bootstrap\4.5.3\contentFiles\any\any\wwwroot\js\bootstrap.min.js.map" />
+    <Content Remove="wwwroot\js\JavaScript.js" />
+    <Content Remove="wwwroot\js\Site.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="User.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="wwwroot\img\" />
-    <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
   <ItemGroup>
