--- a/COMP 1004.csproj
+++ b/COMP 1004.csproj
@@ -42,6 +42,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="wwwroot\DataController.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="User.cs" />
   </ItemGroup>
 
